<resources>
    <string name="app_name">TeenPlus</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="password">Password</string>
    <string name="password_again">Password Again</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender : </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register">Register</string>
    <string name="register_form_text">You need to fill up below register form.</string>
    <string name="no_field_can_be_empty">No field can be empty</string>
    <string name="passwords_must_be_the_same">Password and password again field must be the same</string>
    <string name="here_is_values">Here is values: %1$s</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="title_feed">Feed</string>
    <string name="title_search">Search</string>
    <string name="title_messaging">Messaging</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="btn_sign_out">Sign Out</string>

</resources>
