<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/ic_menu_black_24dp"
        android:title="Feed" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_messaging"
        android:icon="@drawable/ic_chat_bubble_outline_black_24dp"
        android:title="@string/title_messaging" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_none_black_24dp"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_perm_identity_black_24dp"
        android:title="@string/title_profile" />

</menu>